--- a/src/components/ExpenseItem/ExpenseItem.css
+++ b/src/components/ExpenseItem/ExpenseItem.css
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 10px;
     border-bottom: 1px solid #CCCCFF;
-    background-color: #2E2E3E; /* Fondo para cada item */
+    background-color: #2E2E3E; 
     margin-bottom: 10px;
     border-radius: 5px;
   }
