--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@
 
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #1E1E2F; /* Fondo morado oscuro */
-  color: #FFFFFF; /* Texto blanco */
+  background-color: #1E1E2F; 
+  color: #FFFFFF; 
   line-height: 1.6;
   display: flex;
   justify-content: center;
@@ -17,11 +17,11 @@ body {
 }
 
 h1, h2, h3 {
-  color: #E0E0FF; /* Tono violeta claro */
+  color: #E0E0FF; 
 }
 
 button {
-  background-color: #6A0DAD; /* Botón morado oscuro */
+  background-color: #6A0DAD; 
   color: #FFFFFF;
   border: none;
   padding: 10px 20px;
@@ -30,7 +30,7 @@ button {
 }
 
 button:hover {
-  background-color: #7D3C98; /* Un tono más claro para hover */
+  background-color: #7D3C98; 
 }
 
 input, select {
@@ -39,16 +39,16 @@ input, select {
   border: 1px solid #CCCCFF;
   margin-bottom: 10px;
   width: 100%;
-  background-color: #2E2E3E; /* Fondo de inputs morado oscuro */
+  background-color: #2E2E3E; 
   color: #FFFFFF;
 }
 
 input::placeholder {
-  color: #AAAAAA; /* Placeholder gris claro */
+  color: #AAAAAA;
 }
 
 form {
-  background-color: #282846; /* Fondo morado oscuro para los formularios */
+  background-color: #282846; 
   padding: 20px;
   border-radius: 10px;
 }
